--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -5,4 +5,5 @@
     <topics dir="topics" web-path="topics"/>
     <images dir="images" web-path="images"/>
     <instance src="p.tree" web-path="/p/" version="1.0"/>
+    <instance src="f.tree" web-path="/f/" version="1.0"/>
 </ihp>
