initial coding project

--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -5,5 +5,7 @@
     <topics dir="topics" web-path="topics"/>
     <images dir="images" web-path="images"/>
     <instance src="p.tree" web-path="/p/" version="1.0"/>
-    <instance src="f.tree" web-path="/f/" version="1.0"/>
+    <instance src="f.tree" web-path="/flash/" version="1.0"/>
+    <instance src="autogen.tree" web-path="/autogen/" version="0.1"/>
+    <instance src="pup.tree" web-path="/pup/" version="1.0"/>
 </ihp>
