--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -8,4 +8,7 @@
     <instance src="f.tree" web-path="/flash/" version="1.0"/>
     <instance src="autogen.tree" web-path="/autogen/" version="0.1"/>
     <instance src="pup.tree" web-path="/pup/" version="1.0"/>
+    <instance src="tcf.tree" web-path="/tcf/" version="1.0"/>
+    <instance src="s.tree" web-path="/s/" version="1.0"/>
+    <instance src="c.tree" web-path="/c/" version="1.0"/>
 </ihp>
