adding jsons, features and more

--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -11,4 +11,5 @@
     <instance src="tcf.tree" web-path="/tcf/" version="1.0"/>
     <instance src="s.tree" web-path="/s/" version="1.0"/>
     <instance src="c.tree" web-path="/c/" version="1.0"/>
+    <instance src="t.tree" web-path="/t/" version="1.0"/>
 </ihp>
